--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,24 @@
-<h2>hello <%= user.name %></h2>
-<ul>
-    <% users.forEach(function(user){ %>
-      <li><%=user%></li>
-    <% }); %>
-  </ul>
+<html>
+      <head>
+        <link href="main.css" type="text/css" rel="stylesheet">
+      </head>
+      <body>
+        <table>
+          <thead>
+            <tr class="one">
+              <th>Name</th>
+              <th>Class</th>
+            </tr>
+          </thead>
+          <tbody>
+              <% users.forEach(function(user){ %>
+            <tr class="two">
+              <th><%= user.name %></th>
+              <th><%= user.class %></th>
+            </tr>
+            <% }); %>
+          </tbody>
+        </table>
+      </body>
+</html>
+ 
